<resources>
    <string name="app_name">Movie Collection</string>
    <string name="title_activity_main2">Movie Collection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie Collection</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="filter_all">All</string>
    <string name="filter_favorites">Favorites</string>
    <string name="filter_alphabetical" />
    <string name="movie_name_content">Movie Title</string>
    <string name="movie_description_content">Description</string>
    <string name="category_scifi">Sci-Fi</string>
    <string name="category_comedy">Comedy</string>
    <string name="category_drama">Drama</string>
    <string name="category_action">Action</string>
    <string name="category_horror">Horror</string>
    <string name="content_genre">Genre</string>
    <string name="content_media">Media</string>
    <string name="add_movie_item_text">Add Movie</string>
    <string name="movie_name">Movie Name</string>
    <string name="enter_search_term">Enter movie title or description</string>
    <string name="find_a_movie_text">Find a movie</string>
    <string name="menu_add_new_moview">Movie</string>
    <string name="format_type">Media format (Movie or TV Show)</string>
    <string name="show_format">Movie or TV Show</string>
    <string name="media_type_text">Streaming, Blue-ray, DVD</string>
    <string name="genre_text">Drama, Comedy, Sci-Fi, Documentary</string>
</resources>